# usermgmt

./: '  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ci_local_check.sh  conf.toml  install.sh  typos.toml
.cargo/: config.toml
.github/workflows/: build.yml  check.yml  release.yml
docker/: README.md  after_container_start.sh  conf.toml  docker-compose.ldap.yml  docker-compose.yml  docker_build_set_up.sh  restart_running_ctl_db.sh  run_dev_docker.sh  tear_dev_docker_down.sh  throw_away_volumes.sh
docker/bootstrap_lidfs/: 00_slurm_role_schema.ldif  01_add_people.ldif  02_scheme_ldap_attr.ldif
docker/slurm-docker-cluster/: Dockerfile  add_slurm_data.sh  dev_user_ed25519  dev_user_ed25519.pub  docker-compose.yml  docker-entrypoint.sh  register_cluster.sh  slurm.conf  ssh_host_rsa_key  ssh_host_rsa_key.pub
docs/: development_docker.md
ldif/: example.ldif  example1.ldif  modify.ldif  student.ldif  template.ldif  test.ldif  wagnerdo.ldif
slint_gui/: Cargo.toml  build.rs
slint_gui/src/: io_resources.rs  main.rs  pending_jobs.rs  task.rs
slint_gui/ui/: about.slint  configuration_page.slint  entry_field.slint  global.slint  item.slint  link.slint  listing.slint  main.slint  page.slint  side_bar.slint  status_box.slint
src/: app_error.rs  cli.rs  config.rs  dir.rs  entity.rs  ldap.rs  lib.rs  main.rs  new_entity.rs  slurm.rs  ssh.rs  util.rs
src/cli/: on_which_system.rs
src/ldap/: ldap_config.rs  ldap_paths.rs  ldap_readonly_config.rs  testing.rs  text_list_output.rs
src/slurm/: commmand_builder.rs
src/snapshots/: usermgmt__entity__testing__error_for_not_valid_default_qos.snap  usermgmt__entity__testing__error_for_not_valid_group_of_qos.snap  (+2 more)
usermgmt/: Cargo.toml
usermgmt/src/: cli_ssh_credential.rs  cli_user_input.rs  ldap_cli_credential.rs  main.rs  user_input.rs
usermgmt_gui/: CHANGELOG.md  Cargo.toml  README.md
usermgmt_gui/assets/: Init.toml  Settings.toml
usermgmt_gui/src/: constants.rs  current_selected_view.rs  draw_selected_view.rs  drawing.rs  general_utils.rs  gui_design.rs  io_background_worker.rs  io_resource_manager.rs  main.rs  main_logic.rs  prelude.rs  usermgmt_window.rs  which_systems.rs
usermgmt_gui/src/current_selected_view/: add_state.rs  configuration_state.rs  connection_state.rs  ldap_connection_state.rs  listing_state.rs  modify_state.rs  remove_state.rs  ssh_connection_state.rs  start_screeen_state.rs
usermgmt_gui/src/draw_selected_view/: draw_add_state.rs  draw_delete_state.rs  draw_listing_of_users.rs  util.rs
usermgmt_gui/src/drawing/: about.rs  configuration.rs  draw_add_state.rs  draw_delete_state.rs  draw_listing_of_users.rs  draw_utils.rs  modify_state.rs
usermgmt_gui/src/drawing/draw_utils/: group_drawing.rs  text_field_entry.rs
usermgmt_gui/src/gui_design/: text_design.rs
usermgmt_gui/src/io_resource_manager/: io_background_worker.rs  io_task_status.rs
usermgmt_gui/src/main_logic/: current_selected_view.rs  query_io_tasks.rs  settings.rs  top_level_drawing.rs  usermgmt_window.rs
usermgmt_gui/src/main_logic/settings/: development.rs
usermgmt_lib/: Cargo.toml
usermgmt_lib/src/: app_error.rs  app_panic_hook.rs  changes_to_user.rs  cli.rs  config.rs  constants.rs  dir.rs  entity.rs  group.rs  ldap.rs  lib.rs  logging.rs  new_entity.rs  operations.rs  slurm.rs  ssh.rs  util.rs
usermgmt_lib/src/cli/: on_which_system.rs
usermgmt_lib/src/config/: path_sources.rs
usermgmt_lib/src/config/snapshots/: usermgmt_lib__config__path_sources__testing__return_resolve_with_home_folder.snap
usermgmt_lib/src/ldap/: ldap_config.rs  ldap_credential.rs  ldap_paths.rs  ldap_search_result.rs  ldap_session.rs  ldap_simple_credential.rs  testing.rs  text_list_output.rs
usermgmt_lib/src/ldap/snapshots/: usermgmt_lib__ldap__testing__should_produce_simple_output.snap  usermgmt_lib__ldap__testing__should_produce_table_from_ldap_search.snap
usermgmt_lib/src/slurm/: command_builder.rs  commmand_builder.rs  listed_user.rs
usermgmt_lib/src/slurm/snapshots/: usermgmt_lib__slurm__command_builder__testing__list_user.snap  usermgmt_lib__slurm__command_builder__testing__list_user_parserable.snap  usermgmt_lib__slurm__command_builder__testing__modify_user.snap  usermgmt_lib__slurm__command_builder__testing__produce_add_username_with_account_and_qos.snap  usermgmt_lib__slurm__command_builder__testing__produce_delete_user_with_local_command.snap  usermgmt_lib__slurm__command_builder__testing__produce_delete_user_with_separate_path.snap  usermgmt_lib__slurm__command_builder__testing__produce_immediate_add_username_with_account_and_qos.snap  usermgmt_lib__slurm__commmand_builder__testing__list_user.snap  usermgmt_lib__slurm__commmand_builder__testing__list_user_parserable.snap  usermgmt_lib__slurm__commmand_builder__testing__modify_user.snap  usermgmt_lib__slurm__commmand_builder__testing__produce_add_username_with_account_and_qos.snap  usermgmt_lib__slurm__commmand_builder__testing__produce_delete_user_with_local_command.snap  usermgmt_lib__slurm__commmand_builder__testing__produce_delete_user_with_seperate_path.snap  usermgmt_lib__slurm__commmand_builder__testing__produce_immediate_add_username_with_account_and_qos.snap  usermgmt_lib__slurm__commmand_builder__testing__produce_immediate_add_username_with_account_and_qos.snap.new  usermgmt_lib__slurm__listed_user__testing__parses_correctly.snap
usermgmt_lib/src/snapshots/: usermgmt_lib__entity__testing__error_for_not_valid_default_qos.snap  usermgmt_lib__entity__testing__error_for_not_valid_group_of_qos.snap  usermgmt_lib__entity__testing__ok_with_valid_default_and_group_of_qos_pubkey.snap
usermgmt_lib/src/ssh/: ssh_connection.rs  ssh_credential.rs  ssh_credentials.rs  ssh_given_credential.rs  ssh_key_pairs.rs  ssh_public_key_suggestion.rs
usermgmt_lib/src/util/: gid.rs  result_accumalator.rs  result_accumulator.rs  trimmed_non_empty_text.rs  user_input.rs  valid_qos.rs
usermgmt_lib/src/util/snapshots/: usermgmt_lib__util__result_accumalator__testing__resolve_to_errors.snap  usermgmt_lib__util__result_accumulator__testing__resolve_to_errors.snap
(+16 files in other folders)
