[workspace]
members = ["usermgmt", "usermgmt_lib", "usermgmt_gui", "slint_gui"]
default-members = ["usermgmt"]
resolver = "2"

[workspace.dependencies]
log = "0.4.16"
clap = { version = "4.4.6", features = ["derive"] }
strum = { version = "0.25.0", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.8.1"
once_cell = "1.18.0"
env_logger = "0.10.0"
