[package]
name = "slint_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usermgmt_lib = { path = "../usermgmt_lib" }
env_logger = { workspace = true }
log = { workspace = true }
slint = "1.2.2"

[build-dependencies]
slint-build = "1.2.2"
