[package]
name = "usermgmt_gui"
version = "0.5.1"
edition = "2021"
license-file = "LICENSE"
description = "Simultaneous Slurm and LDAP user management GUI Tool"
readme = "README.md"
rust-version = "1.70.0"

[dependencies]
usermgmt_lib = { path = "../usermgmt_lib" }
env_logger = { workspace = true }
log = { workspace = true }
eframe = { version = "0.23.0" }
egui_extras = "0.23.0"
