[package]
name = "usermgmt_gui"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "GUI for simultaneous Slurm and LDAP user management."
readme = "README.md"
rust-version = "1.76.0"

[dependencies]
usermgmt_lib = { path = "../usermgmt_lib" }

log = { workspace = true }
strum = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
num = { workspace = true }
getset = { workspace = true }

eframe = { version = "0.26.2" }
egui_extras = "0.26.2"

# TODO: replace this by crates.io once the PR which is pointed to, is merged.
hotwatch = { git = "https://github.com/BoolPurist/hotwatch", branch = "toggleable_log", default-features = false }
 
[package.metadata.deb]
maintainer = "Florian Naumann <naumannfl79974@th-nuernberg.de>"
copyright = "2025, Technische Hochschule Nürnberg Georg Simon Ohm"
