[package]
name = "usermgmt_lib"
version = "0.6.4"
edition = "2021"
license-file = "LICENSE"
description = "Simultaneous Slurm and LDAP user management library"
readme = "README.md"
rust-version = "1.70.0"

[dependencies]
log = { workspace = true }
clap = { workspace = true }
once_cell = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
const_format = { workspace = true }
getset = { workspace = true }
confy = "0.6.0"
ldap3 = "0.11.3"
maplit = "1.0.2"
ssh2 = "0.9.4"
anyhow = { version = "1.0.80", features = ["backtrace"] }
prettytable = "0.10.0"
dirs = "5.0.1"
derive_more = { version = "0.99.17", default-features = false, features = [
  "from",
  "into",
  "as_ref",
  "display",
  "into_iterator",
  "deref",
] }
flexi_logger = { version = "0.27.4", features = ["async"] }
chrono = { version = "0.4.38", features = ["alloc"] }

[dev-dependencies]
insta = { version = "1.35.1", features = ["yaml"] }
